# quant

./: .gitignore  DEPLOYMENT_GUIDE.md  ESSENTIAL_FILES.md  FINAL_CHECKPOINT.md  Procfile  README.md  REORGANIZATION_SUMMARY.md  backup.py  clear_cache.py  deploy.sh  deploy_all.py  deploy_main.py  docs.py  gpt_news_detector.py  install_requirements.py  main.py  main_dark.py  manifest.json  openai_market_analyst.py  pyproject.toml  quick_start.py  replit.md  run_platform.py  startup.py  startup_render.sh  streamlit_app.py  test_reorganization.py
.streamlit/: config.toml
docs/: DEPLOYMENT_GUIDE.md  FINAL_CHECKPOINT.md
infrastructure/: README.md
infrastructure/config/: pyproject.toml  requirements.txt
infrastructure/deployment/: Procfile  deploy.sh  deploy_main.py  startup.py  startup_render.sh
mobile/: BUILD_INSTRUCTIONS.md  MOBILE_APP_SUMMARY.md  README.md
mobile/android/: AndroidManifest.xml  MainActivity.java  build.gradle
mobile/ios/: Info.plist  QUANTFINApp.swift  styles.swift
src/: README.md  __init__.py
src/backend/: __init__.py  advanced_gpt_analyst.py
src/data/: market.py
src/frontend/: __init__.py  app.py  main.py  main_dark.py  pwa_integration.py  service-worker.js
tools/: README.md  docs.py  install_requirements.py  monitor.py  run_platform.py  test_platform.py  update.py
