[project]
name = "quantfin-society-research"
version = "2.0.0"
description = "Professional Event Study Analysis Platform"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.1",
    "pandas>=2.2.3",
    "numpy>=2.2.6",
    "plotly>=6.1.2",
    "yfinance>=0.2.61",
    "scipy>=1.15.3",
    "openai>=1.84.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.1",
    "trafilatura>=2.0.0",
    "polygon>=1.2.6",
    "polygon-api-client>=1.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
